projeto1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CCOMMENT
    CCONST
    CPPCOMMENT
    ERROR
    UNMATCHEDQUOTE
    UNTERMCOMMENT

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> global_declaration_list
Rule 3     global_declaration_list -> global_declaration
Rule 4     global_declaration_list -> global_declaration_list global_declaration
Rule 5     global_declaration -> function_definition
Rule 6     global_declaration -> declaration
Rule 7     function_definition -> type_specifier declarator declaration_list_opt compound_statement
Rule 8     type_specifier -> VOID
Rule 9     type_specifier -> CHAR
Rule 10    type_specifier -> INT
Rule 11    type_specifier -> FLOAT
Rule 12    declarator -> pointer direct_declarator
Rule 13    declarator -> direct_declarator
Rule 14    pointer -> TIMES pointer_opt
Rule 15    pointer_opt -> pointer
Rule 16    pointer_opt -> empty
Rule 17    direct_declarator -> ID
Rule 18    direct_declarator -> LPAREN declarator RPAREN
Rule 19    direct_declarator -> direct_declarator LBRACK constant_expression_opt RBRACK
Rule 20    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 21    direct_declarator -> direct_declarator LPAREN identifier_list_opt RPAREN
Rule 22    constant_expression -> expr
Rule 23    constant_expression_opt -> constant_expression
Rule 24    constant_expression_opt -> empty
Rule 25    identifier_list -> identifier_list ID
Rule 26    identifier_list -> ID
Rule 27    identifier_list_opt -> identifier_list
Rule 28    identifier_list_opt -> empty
Rule 29    expr -> cast_expression
Rule 30    expr -> expr PLUS expr
Rule 31    expr -> expr MINUS expr
Rule 32    expr -> expr TIMES expr
Rule 33    expr -> expr DIVIDE expr
Rule 34    expr -> expr EQUALS expr
Rule 35    expr -> expr MOD expr
Rule 36    expr -> expr GT expr
Rule 37    expr -> expr GET expr
Rule 38    expr -> expr LT expr
Rule 39    expr -> expr LET expr
Rule 40    expr -> expr DIFF expr
Rule 41    expr -> expr AND expr
Rule 42    expr -> expr OR expr
Rule 43    cast_expression -> unary_expression
Rule 44    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 45    unary_expression -> postfix_expression
Rule 46    unary_expression -> PP unary_expression
Rule 47    unary_expression -> MM unary_expression
Rule 48    unary_expression -> unary_operator cast_expression
Rule 49    postfix_expression -> primary_expression
Rule 50    postfix_expression -> postfix_expression LBRACK expression RBRACK
Rule 51    postfix_expression -> postfix_expression LPAREN argument_expression RPAREN
Rule 52    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 53    postfix_expression -> postfix_expression PP
Rule 54    postfix_expression -> postfix_expression MM
Rule 55    primary_expression -> ID
Rule 56    primary_expression -> constant
Rule 57    primary_expression -> STRING_LITERAL
Rule 58    primary_expression -> LPAREN expression RPAREN
Rule 59    constant -> ICONST
Rule 60    constant -> FCONST
Rule 61    expression -> assignment_expression
Rule 62    expression -> assignment_expression COMMA expression
Rule 63    expression_opt -> expression
Rule 64    expression_opt -> empty
Rule 65    assignment_expression -> expr
Rule 66    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 67    argument_expression -> assignment_expression
Rule 68    argument_expression -> argument_expression COMMA assignment_expression
Rule 69    assignment_operator -> ASSIGN
Rule 70    assignment_operator -> TASSIGN
Rule 71    assignment_operator -> DASSIGN
Rule 72    assignment_operator -> MODASSIGN
Rule 73    assignment_operator -> PASSIGN
Rule 74    assignment_operator -> MINASSIGN
Rule 75    unary_operator -> ADDRESS
Rule 76    unary_operator -> TIMES
Rule 77    unary_operator -> PLUS
Rule 78    unary_operator -> MINUS
Rule 79    unary_operator -> NOT
Rule 80    parameter_list -> parameter_declaration
Rule 81    parameter_list -> parameter_list COMMA parameter_declaration
Rule 82    parameter_declaration -> type_specifier declarator
Rule 83    declaration -> type_specifier init_declarator_list SEMI
Rule 84    declaration_list -> declaration
Rule 85    declaration_list -> declaration_list declaration
Rule 86    declaration_list_opt -> declaration_list
Rule 87    declaration_list_opt -> empty
Rule 88    init_declarator -> declarator
Rule 89    init_declarator -> declarator ASSIGN initializer
Rule 90    init_declarator_list -> init_declarator
Rule 91    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 92    initializer -> assignment_expression
Rule 93    initializer -> LBRACE initializer_list RBRACE
Rule 94    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 95    initializer_list -> initializer
Rule 96    initializer_list -> initializer_list COMMA initializer
Rule 97    compound_statement -> LBRACE declaration_list_opt statement_list_opt RBRACE
Rule 98    statement -> expression_statement
Rule 99    statement -> compound_statement
Rule 100   statement -> selection_statement
Rule 101   statement -> iteration_statement
Rule 102   statement -> jump_statement
Rule 103   statement -> assert_statement
Rule 104   statement -> print_statement
Rule 105   statement -> read_statement
Rule 106   expression_statement -> expression_opt SEMI
Rule 107   selection_statement -> IF LPAREN expression RPAREN statement
Rule 108   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 109   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 110   iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 111   iteration_statement -> FOR LPAREN declaration expression_opt SEMI expression_opt RPAREN statement
Rule 112   jump_statement -> BREAK SEMI
Rule 113   jump_statement -> RETURN expression_opt SEMI
Rule 114   assert_statement -> ASSERT expr SEMI
Rule 115   print_statement -> PRINT LPAREN expression_opt RPAREN SEMI
Rule 116   read_statement -> READ LPAREN argument_expression RPAREN SEMI
Rule 117   statement_list -> statement_list statement
Rule 118   statement_list -> statement
Rule 119   statement_list_opt -> statement_list
Rule 120   statement_list_opt -> empty

Terminals, with rules where they appear

ADDRESS              : 75
AND                  : 41
ASSERT               : 114
ASSIGN               : 69 89
BREAK                : 112
CCOMMENT             : 
CCONST               : 
CHAR                 : 9
COMMA                : 62 68 81 91 94 96
CPPCOMMENT           : 
DASSIGN              : 71
DIFF                 : 40
DIVIDE               : 33
ELSE                 : 108
EQUALS               : 34
ERROR                : 
FCONST               : 60
FLOAT                : 11
FOR                  : 110 111
GET                  : 37
GT                   : 36
ICONST               : 59
ID                   : 17 25 26 55
IF                   : 107 108
INT                  : 10
LBRACE               : 93 94 97
LBRACK               : 19 50
LET                  : 39
LPAREN               : 18 20 21 44 51 52 58 107 108 109 110 111 115 116
LT                   : 38
MINASSIGN            : 74
MINUS                : 31 78
MM                   : 47 54
MOD                  : 35
MODASSIGN            : 72
NOT                  : 79
OR                   : 42
PASSIGN              : 73
PLUS                 : 30 77
PP                   : 46 53
PRINT                : 115
RBRACE               : 93 94 97
RBRACK               : 19 50
READ                 : 116
RETURN               : 113
RPAREN               : 18 20 21 44 51 52 58 107 108 109 110 111 115 116
SEMI                 : 83 106 110 110 111 112 113 114 115 116
STRING_LITERAL       : 57
TASSIGN              : 70
TIMES                : 14 32 76
UNMATCHEDQUOTE       : 
UNTERMCOMMENT        : 
VOID                 : 8
WHILE                : 109
error                : 

Nonterminals, with rules where they appear

argument_expression  : 51 68 116
assert_statement     : 103
assignment_expression : 61 62 66 67 68 92
assignment_operator  : 66
cast_expression      : 29 44 48
compound_statement   : 7 99
constant             : 56
constant_expression  : 23
constant_expression_opt : 19
declaration          : 6 84 85 111
declaration_list     : 85 86
declaration_list_opt : 7 97
declarator           : 7 18 82 88 89
direct_declarator    : 12 13 19 20 21
empty                : 16 24 28 64 87 120
expr                 : 22 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 65 114
expression           : 50 58 62 63 107 108 109
expression_opt       : 106 110 110 110 111 111 113 115
expression_statement : 98
function_definition  : 5
global_declaration   : 3 4
global_declaration_list : 2 4
identifier_list      : 25 27
identifier_list_opt  : 21
init_declarator      : 90 91
init_declarator_list : 83 91
initializer          : 89 95 96
initializer_list     : 93 94 96
iteration_statement  : 101
jump_statement       : 102
parameter_declaration : 80 81
parameter_list       : 20 81
pointer              : 12 15
pointer_opt          : 14
postfix_expression   : 45 50 51 52 53 54
primary_expression   : 49
print_statement      : 104
program              : 0
read_statement       : 105
selection_statement  : 100
statement            : 107 108 108 109 110 111 117 118
statement_list       : 117 119
statement_list_opt   : 97
type_specifier       : 7 44 82 83
unary_expression     : 43 46 47 66
unary_operator       : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . global_declaration_list
    (3) global_declaration_list -> . global_declaration
    (4) global_declaration_list -> . global_declaration_list global_declaration
    (5) global_declaration -> . function_definition
    (6) global_declaration -> . declaration
    (7) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (83) declaration -> . type_specifier init_declarator_list SEMI
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (2) program -> global_declaration_list .
    (4) global_declaration_list -> global_declaration_list . global_declaration
    (5) global_declaration -> . function_definition
    (6) global_declaration -> . declaration
    (7) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (83) declaration -> . type_specifier init_declarator_list SEMI
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    $end            reduce using rule 2 (program -> global_declaration_list .)
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    global_declaration             shift and go to state 11
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) global_declaration_list -> global_declaration .

    VOID            reduce using rule 3 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 3 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 3 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 3 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 3 (global_declaration_list -> global_declaration .)


state 4

    (5) global_declaration -> function_definition .

    VOID            reduce using rule 5 (global_declaration -> function_definition .)
    CHAR            reduce using rule 5 (global_declaration -> function_definition .)
    INT             reduce using rule 5 (global_declaration -> function_definition .)
    FLOAT           reduce using rule 5 (global_declaration -> function_definition .)
    $end            reduce using rule 5 (global_declaration -> function_definition .)


state 5

    (6) global_declaration -> declaration .

    VOID            reduce using rule 6 (global_declaration -> declaration .)
    CHAR            reduce using rule 6 (global_declaration -> declaration .)
    INT             reduce using rule 6 (global_declaration -> declaration .)
    FLOAT           reduce using rule 6 (global_declaration -> declaration .)
    $end            reduce using rule 6 (global_declaration -> declaration .)


state 6

    (7) function_definition -> type_specifier . declarator declaration_list_opt compound_statement
    (83) declaration -> type_specifier . init_declarator_list SEMI
    (12) declarator -> . pointer direct_declarator
    (13) declarator -> . direct_declarator
    (90) init_declarator_list -> . init_declarator
    (91) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (14) pointer -> . TIMES pointer_opt
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . LPAREN declarator RPAREN
    (19) direct_declarator -> . direct_declarator LBRACK constant_expression_opt RBRACK
    (20) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (21) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (88) init_declarator -> . declarator
    (89) init_declarator -> . declarator ASSIGN initializer

    TIMES           shift and go to state 17
    ID              shift and go to state 18
    LPAREN          shift and go to state 19

    declarator                     shift and go to state 12
    init_declarator_list           shift and go to state 13
    pointer                        shift and go to state 14
    direct_declarator              shift and go to state 15
    init_declarator                shift and go to state 16

state 7

    (8) type_specifier -> VOID .

    TIMES           reduce using rule 8 (type_specifier -> VOID .)
    ID              reduce using rule 8 (type_specifier -> VOID .)
    LPAREN          reduce using rule 8 (type_specifier -> VOID .)
    RPAREN          reduce using rule 8 (type_specifier -> VOID .)


state 8

    (9) type_specifier -> CHAR .

    TIMES           reduce using rule 9 (type_specifier -> CHAR .)
    ID              reduce using rule 9 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 9 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 9 (type_specifier -> CHAR .)


state 9

    (10) type_specifier -> INT .

    TIMES           reduce using rule 10 (type_specifier -> INT .)
    ID              reduce using rule 10 (type_specifier -> INT .)
    LPAREN          reduce using rule 10 (type_specifier -> INT .)
    RPAREN          reduce using rule 10 (type_specifier -> INT .)


state 10

    (11) type_specifier -> FLOAT .

    TIMES           reduce using rule 11 (type_specifier -> FLOAT .)
    ID              reduce using rule 11 (type_specifier -> FLOAT .)
    LPAREN          reduce using rule 11 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 11 (type_specifier -> FLOAT .)


state 11

    (4) global_declaration_list -> global_declaration_list global_declaration .

    VOID            reduce using rule 4 (global_declaration_list -> global_declaration_list global_declaration .)
    CHAR            reduce using rule 4 (global_declaration_list -> global_declaration_list global_declaration .)
    INT             reduce using rule 4 (global_declaration_list -> global_declaration_list global_declaration .)
    FLOAT           reduce using rule 4 (global_declaration_list -> global_declaration_list global_declaration .)
    $end            reduce using rule 4 (global_declaration_list -> global_declaration_list global_declaration .)


state 12

    (7) function_definition -> type_specifier declarator . declaration_list_opt compound_statement
    (88) init_declarator -> declarator .
    (89) init_declarator -> declarator . ASSIGN initializer
    (86) declaration_list_opt -> . declaration_list
    (87) declaration_list_opt -> . empty
    (84) declaration_list -> . declaration
    (85) declaration_list -> . declaration_list declaration
    (1) empty -> .
    (83) declaration -> . type_specifier init_declarator_list SEMI
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    SEMI            reduce using rule 88 (init_declarator -> declarator .)
    COMMA           reduce using rule 88 (init_declarator -> declarator .)
    ASSIGN          shift and go to state 22
    LBRACE          reduce using rule 1 (empty -> .)
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    type_specifier                 shift and go to state 20
    declaration_list_opt           shift and go to state 21
    declaration_list               shift and go to state 23
    empty                          shift and go to state 24
    declaration                    shift and go to state 25

state 13

    (83) declaration -> type_specifier init_declarator_list . SEMI
    (91) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            shift and go to state 26
    COMMA           shift and go to state 27


state 14

    (12) declarator -> pointer . direct_declarator
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . LPAREN declarator RPAREN
    (19) direct_declarator -> . direct_declarator LBRACK constant_expression_opt RBRACK
    (20) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (21) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN

    ID              shift and go to state 18
    LPAREN          shift and go to state 19

    direct_declarator              shift and go to state 28

state 15

    (13) declarator -> direct_declarator .
    (19) direct_declarator -> direct_declarator . LBRACK constant_expression_opt RBRACK
    (20) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (21) direct_declarator -> direct_declarator . LPAREN identifier_list_opt RPAREN

    ASSIGN          reduce using rule 13 (declarator -> direct_declarator .)
    VOID            reduce using rule 13 (declarator -> direct_declarator .)
    CHAR            reduce using rule 13 (declarator -> direct_declarator .)
    INT             reduce using rule 13 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 13 (declarator -> direct_declarator .)
    LBRACE          reduce using rule 13 (declarator -> direct_declarator .)
    SEMI            reduce using rule 13 (declarator -> direct_declarator .)
    COMMA           reduce using rule 13 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 13 (declarator -> direct_declarator .)
    LBRACK          shift and go to state 29
    LPAREN          shift and go to state 30


state 16

    (90) init_declarator_list -> init_declarator .

    SEMI            reduce using rule 90 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 90 (init_declarator_list -> init_declarator .)


state 17

    (14) pointer -> TIMES . pointer_opt
    (15) pointer_opt -> . pointer
    (16) pointer_opt -> . empty
    (14) pointer -> . TIMES pointer_opt
    (1) empty -> .

    TIMES           shift and go to state 17
    ID              reduce using rule 1 (empty -> .)
    LPAREN          reduce using rule 1 (empty -> .)

    pointer_opt                    shift and go to state 31
    pointer                        shift and go to state 32
    empty                          shift and go to state 33

state 18

    (17) direct_declarator -> ID .

    LBRACK          reduce using rule 17 (direct_declarator -> ID .)
    LPAREN          reduce using rule 17 (direct_declarator -> ID .)
    ASSIGN          reduce using rule 17 (direct_declarator -> ID .)
    VOID            reduce using rule 17 (direct_declarator -> ID .)
    CHAR            reduce using rule 17 (direct_declarator -> ID .)
    INT             reduce using rule 17 (direct_declarator -> ID .)
    FLOAT           reduce using rule 17 (direct_declarator -> ID .)
    LBRACE          reduce using rule 17 (direct_declarator -> ID .)
    SEMI            reduce using rule 17 (direct_declarator -> ID .)
    COMMA           reduce using rule 17 (direct_declarator -> ID .)
    RPAREN          reduce using rule 17 (direct_declarator -> ID .)


state 19

    (18) direct_declarator -> LPAREN . declarator RPAREN
    (12) declarator -> . pointer direct_declarator
    (13) declarator -> . direct_declarator
    (14) pointer -> . TIMES pointer_opt
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . LPAREN declarator RPAREN
    (19) direct_declarator -> . direct_declarator LBRACK constant_expression_opt RBRACK
    (20) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (21) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN

    TIMES           shift and go to state 17
    ID              shift and go to state 18
    LPAREN          shift and go to state 19

    declarator                     shift and go to state 34
    pointer                        shift and go to state 14
    direct_declarator              shift and go to state 15

state 20

    (83) declaration -> type_specifier . init_declarator_list SEMI
    (90) init_declarator_list -> . init_declarator
    (91) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (88) init_declarator -> . declarator
    (89) init_declarator -> . declarator ASSIGN initializer
    (12) declarator -> . pointer direct_declarator
    (13) declarator -> . direct_declarator
    (14) pointer -> . TIMES pointer_opt
    (17) direct_declarator -> . ID
    (18) direct_declarator -> . LPAREN declarator RPAREN
    (19) direct_declarator -> . direct_declarator LBRACK constant_expression_opt RBRACK
    (20) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (21) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN

    TIMES           shift and go to state 17
    ID              shift and go to state 18
    LPAREN          shift and go to state 19

    init_declarator_list           shift and go to state 13
    init_declarator                shift and go to state 16
    declarator                     shift and go to state 35
    pointer                        shift and go to state 14
    direct_declarator              shift and go to state 15

state 21

    (7) function_definition -> type_specifier declarator declaration_list_opt . compound_statement
    (97) compound_statement -> . LBRACE declaration_list_opt statement_list_opt RBRACE

    LBRACE          shift and go to state 37

    compound_statement             shift and go to state 36

state 22

    (89) init_declarator -> declarator ASSIGN . initializer
    (92) initializer -> . assignment_expression
    (93) initializer -> . LBRACE initializer_list RBRACE
    (94) initializer -> . LBRACE initializer_list COMMA RBRACE
    (65) assignment_expression -> . expr
    (66) assignment_expression -> . unary_expression assignment_operator assignment_expression
    (29) expr -> . cast_expression
    (30) expr -> . expr PLUS expr
    (31) expr -> . expr MINUS expr
    (32) expr -> . expr TIMES expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr MOD expr
    (36) expr -> . expr GT expr
    (37) expr -> . expr GET expr
    (38) expr -> . expr LT expr
    (39) expr -> . expr LET expr
    (40) expr -> . expr DIFF expr
    (41) expr -> . expr AND expr
    (42) expr -> . expr OR expr
    (45) unary_expression -> . postfix_expression
    (46) unary_expression -> . PP unary_expression
    (47) unary_expression -> . MM unary_expression
    (48) unary_expression -> . unary_operator cast_expression
    (43) cast_expression -> . unary_expression
    (44) cast_expression -> . LPAREN type_specifier RPAREN cast_expression
    (49) postfix_expression -> . primary_expression
    (50) postfix_expression -> . postfix_expression LBRACK expression RBRACK
    (51) postfix_expression -> . postfix_expression LPAREN argument_expression RPAREN
    (52) postfix_expression -> . postfix_expression LPAREN RPAREN
    (53) postfix_expression -> . postfix_expression PP
    (54) postfix_expression -> . postfix_expression MM
    (75) unary_operator -> . ADDRESS
    (76) unary_operator -> . TIMES
    (77) unary_operator -> . PLUS
    (78) unary_operator -> . MINUS
    (79) unary_operator -> . NOT
    (55) primary_expression -> . ID
    (56) primary_expression -> . constant
    (57) primary_expression -> . STRING_LITERAL
    (58) primary_expression -> . LPAREN expression RPAREN
    (59) constant -> . ICONST
    (60) constant -> . FCONST
